--- a/templates/index.html
+++ b/templates/index.html
@@ -5,15 +5,15 @@
 
 <div class="container">
     <div class="row">
-        {% for result in session.search_results %}
+        {% for show in session.shows %}
         <div class="col-3 border m-3">
-            <img src="{{result['image_url']}}" alt="">
-            <p class="text-center">{{result['title']}}</p>
+            <img src="{{show['image_url']}}" alt="">
+            <p class="text-center">{{show['title']}}</p>
             {% if session.user_id %}
-            {% if (session['likes'])[result['show_id']] %}
-            <a href="{{url_for('unlike',show_id=result['show_id'])}}">Unlike</a>
+            {% if (session['likes'])[show['show_id']] %}
+            <a href="{{url_for('unlike',show_id=show['show_id'])}}">Unlike</a>
             {% else %}
-            <a href="{{url_for('like',show_id=result['show_id'])}}">Like</a>
+            <a href="{{url_for('like',show_id=show['show_id'])}}">Like</a>
             {% endif %}
             {% endif %}
         </div>
