--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{url_for('index')}}">MyTVGuide</a>
+        <a class="navbar-brand" href="{{url_for('reset')}}">MyTVGuide</a>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
                 {% if session.user_id %}
